--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href=<%=require('./style.css')%> type="text/css" media="all" />
+    <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
 </head>
 
